--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "node-cmd": "^3.0.0",
     "sharp": "^0.23.3"
+  },
+  "devDependencies": {
+    "jest": "^24.9.0"
   }
 }
